--- a/guessing-game.html
+++ b/guessing-game.html
@@ -1,17 +1,20 @@
-<script type="text/javascript">
-<<<<<<< HEAD
+<script>
+
   var guess,
-      answer = colors[random],
+      
       hint1 = 'Try a warmer color..',
       random = Math.floor(Math.random()* 6),
       hint2 = 'Try a cooler color..',
       colors = ['red','orange','yellow','green','blue','indigo','violet'],
-      count = 0;
+      answer = colors[random],
+      count = 1;
+
+      guess = prompt('Try to guess a color in the rainbow within 3 tries. What is your first guess?');
 
   while(count<3){
     if (guess == answer){
       alert('you are correct! ' + 'it was ' + answer + '!');
-      count=4;
+      count=4
     } else if(answer == 'red') {  
       alert('Wrong! ' + hint1);
       guess = prompt('Guess again.');
@@ -50,81 +53,11 @@
     hint2 = 'Try a different cool color.';
 
   };
-  if (count==3){
+  if (count == 3){
     alert('Sorry, you lose... the answer was ' + answer);
   }
 }; 
 
-guess = prompt('Try to guess a color in the rainbow within 3 tries. What is your first guess?');
-=======
-	var guess,
-		answer,
-		hint1,
-		random,
-		hint2,
-		colors,
-		count;
 
-	guess = prompt('Try to guess a color in the rainbow within 3 tries. What is your first guess?');
-	random = Math.floor(Math.random()* 6)
-	colors = ['red','orange','yellow','green','blue','indigo','violet'];
-	answer = colors[random];
-	count = 0;
-
-	hint1 = 'Try a warmer color..';
-	hint2 = 'Try a cooler color..';
-
-
-
-
-
-	while(count<3){
-		if (guess == answer){
-			alert('you are correct! ' + 'it was ' + answer + '!');
-			count=4;
-		} else if(answer == 'red') {	
-			alert('Wrong! ' + hint1);
-			guess = prompt('Guess again.');
-			count++;
-		} else if(answer == 'orange') {	
-			alert('Wrong! ' + hint1);
-			guess = prompt('Guess again.');
-			count++;
-		} else if(answer == 'yellow') {	
-			alert('Wrong! ' + hint1);
-			guess = prompt('Guess again.');
-			count++;
-		} else if(answer == 'green'){
-			alert('Wrong! ' + hint2);
-			guess = prompt('Guess again.');
-			count++;
-		} else if(answer == 'blue'){
-			alert('Wrong! ' + hint2);
-			guess = prompt('Guess again.');
-			count++;
-		} else if(answer == 'indigo'){
-			alert('Wrong! ' + hint2);
-			guess = prompt('Guess again.');
-			count++;
-		} else if(answer == 'violet'){
-			alert('Wrong! ' + hint2);
-			guess = prompt('Guess again.');
-			count++;
-		} else if(incorrect){
-			alert('Was that a real color??');
-			guess = prompt('Guess again.');
-			count++;
-		}
-	if (count > 0){
-		hint1 = 'Try a different warm color.';
-		hint2 = 'Try a different cool color.';
-
-	}
-	if (count==3){
-		alert('Sorry, you lose... the answer was ' + answer);
-	}
-} 
-
->>>>>>> 72abed57c472af5a41376ed7a31644cefc4d62df
 
 </script>
